# mantissa-log

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: DEPLOYMENT_GUIDE.md  MODULE_REFERENCE.md  QUICK_START.md  README.md  README_TESTING.md  architecture.md  getting-started.md  saas-platform-rules-import.md  sigmahq-import-summary.md
docs/api/: api-reference.md
docs/architecture/: system-integration.md
docs/configuration/: alert-routing.md  collector-secrets.md  detection-rules.md  llm-configuration.md  log-sources.md
docs/deployment/: automation.md  aws-deployment.md  multi-cloud.md  multi-region.md  pre-deployment-checklist.md  prerequisites.md  quick-reference.md  troubleshooting.md
docs/development/: cicd.md  contributing.md  local-setup.md  testing.md
docs/features/: advanced-alerting-old.md  conversational-context-phase3.md  conversational-context.md  cost-projection-phase2.md  cost-projection.md  integration-wizards.md  llm-configuration.md  pii-phi-redaction.md  query-to-rule-conversion.md  sigma-rules.md  sql-editing-experience.md
docs/operations/: runbook.md  scaling.md
docs/tutorials/: alert-response-workflow.md  detection-rule-authoring.md  end-to-end-threat-detection.md  quick-start-with-samples.md
examples/: detection-rule.yaml.example
examples/rules/: brute_force_login.yaml
infrastructure/: README.md
infrastructure/aws/: README.md
infrastructure/azure/: README.md
infrastructure/gcp/: README.md
rules/: README.md  schema.json  sigma-schema.json
rules/authentication/: brute_force_login.yaml  console_login_without_mfa.yaml  impossible_travel.yaml  mfa_disabled.yaml  privilege_escalation.yaml
rules/cloud/: cloudtrail_disabled.yaml  encryption_disabled.yaml  iam_policy_dangerous.yaml  public_s3_bucket.yaml
rules/custom/: .gitkeep
rules/network/: data_exfiltration.yaml  port_scanning.yaml  unusual_outbound_port.yaml
rules/playbooks/: README.md  credential-compromise-response.yml
scripts/: README.md  check-env-vars.py  deploy-azure.sh  deploy-gcp.sh  deploy-web.sh  deploy.sh  destroy.sh  fix-critical-bugs.py  fix-env-var-names.sh  generate-sample-data.py  map-sigmahq-rules.py  package-azure-functions.sh  package-lambdas.sh  requirements.txt  run-tests.sh  security-audit.py  setup-dev.sh  smoke-test.sh  standardize-collector-secrets.py  test-rule.py  test-sigma-rules.py  update.sh  validate-deployment.sh  validate-rules.py  validate-sigma-rules.py
src/: README.md  __init__.py
src/aws/: __init__.py
src/azure/: __init__.py
src/gcp/: __init__.py
src/shared/: __init__.py
tests/: README.md  conftest.py
tests/e2e/: __init__.py  test_azure_deployment.py  test_gcp_deployment.py
tests/fixtures/: sample_otlp_metrics.json  sample_otlp_traces.json
tests/integration/: conftest.py  test_alert_to_playbook.py  test_apm_detection.py  test_apm_ingestion.py  (+4 more)
web/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.js
(+1205 files in other folders)
